name:              provisionbot
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: SharedModel
    -- For each build type (web-app, app's ui) we have some common dependencies,
    -- modules, and other options. But there are other cases when we have to
    -- separate mentioned properties.
    -- Only Model is being exposed to both apps.


    if !impl(ghcjs)
        -- Server side configuration, i.e. Yesod Web Application Library
        exposed-modules:
            Application
            Foundation
            Import
            Settings
            Settings.StaticFiles
            Handler.Common
            Handler.Home

        build-depends: yesod                         >= 1.4.0      && < 1.5
                     , yesod-core                    >= 1.4.0      && < 1.5
                     , yesod-auth                    >= 1.4.0      && < 1.5
                     , yesod-static                  >= 1.4.0      && < 1.5
                     , yesod-form                    >= 1.4.0      && < 1.5
                 , data-default
                 , classy-prelude
                     , classy-prelude-yesod
                     , classy-prelude-conduit        >= 0.11.1
                     , containers
                     , safe
                     , time
                     , unordered-containers
                   , vector
                     , persistent-sqlite             >= 2.0        && < 2.2
                     , shakespeare                   >= 2.0        && < 2.1
                     , hjsmin                        >= 0.1        && < 0.2
                     , monad-control                 >= 1.0.0.1        && < 1.1
                     , wai-extra                     >= 3.0        && < 3.1
                     , yaml                          >= 0.8        && < 0.9
                     , file-embed
                     , http-conduit                  >= 2.1        && < 2.2
                     , directory                     >= 1.1        && < 1.3
                     , warp                          >= 3.0        && < 3.1
                     , conduit                       >= 1.0        && < 2.0
                     , conduit-extra >= 1.1.7.1
                     , monad-logger                  >= 0.3        && < 0.4
                     , fast-logger                   >= 2.2        && < 2.3.2
                     , wai-logger                    >= 2.2        && < 2.3
                     , template-haskell
                       , base                          >= 4          && < 5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , aeson                         >= 0.6        && < 0.9

        extensions: NoImplicitPrelude
                  , NoMonomorphismRestriction
                  , TupleSections
                  ,                 RecordWildCards

    else
        -- Client-side configuration, i.e GHCJS Library
        exposed-modules: ClientSide
        build-depends:   ghcjs-base, base
        cpp-options:     -DBROWSER_ONLY


    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    -- These extensions are common for both apps
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                DeriveDataTypeable
                ViewPatterns

   

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix


executable         provisionbot
    if flag(library-only)
        Buildable: False

    build-depends: base


    if !impl(ghcjs)
        main-is:           main.hs
        hs-source-dirs:    app
        build-depends:     provisionbot
                         , yesod
        ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

    else
        main-is:           ClientSide.hs
        -- hs-source-dirs:    .
        build-depends:     provisionbot
                         , ghcjs-base

    -- TODO Learn more about -rtsopts and -with-rtsopts=-N
    -- ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , provisionbot
                 , yesod-test >= 1.4 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
